--- a/RobusAPI.WebApi/RobusAPI.WebApi.csproj
+++ b/RobusAPI.WebApi/RobusAPI.WebApi.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\RobusAPI.Services\RobusAPI.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\ApiV1\" />
+  </ItemGroup>
+
 </Project>
